--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,8 +79,10 @@ nav > a:hover{
 }
 
 main{
-    padding: 10px 50px 30px 50px;
-    margin: 0px 150px 0px 150px;
+    min-width: 300px;
+    max-width: 1500px;
+    margin: auto;
+    padding: 30px;
     
     background-color: white;
     box-shadow: 0px 1px 11px 3px black;
@@ -119,7 +121,7 @@ main>p{
 
 div.video{
     background-color: var(--cor02);    
-    margin: 0px -50px 30px -50px;
+    margin: 0px -20px 30px -20px;
     padding: 20px;
     padding-bottom: 63%;
     position: relative;
@@ -158,7 +160,9 @@ img{
 
 aside{
     background-color: #3BBD8C;    
-    margin: -30px 150px 50px 150px;
+    min-width: 300px;
+    max-width: 1500px;
+    margin: auto;
     padding: 30px;
     border-radius: 40px;
     box-shadow: 0px 8px 10px 5px black;
