--- a/estilo/style.css
+++ b/estilo/style.css
@@ -36,7 +36,7 @@ header{
     margin: 0px;
     padding: 0px;
     height: 130px;
-    width: 100%;
+    max-width: 100%;
     
 }
 
@@ -79,7 +79,7 @@ nav > a:hover{
 }
 
 main{
-    min-width: 400px;
+    min-width: 300px;
     max-width: 1500px;
     margin: auto;
     padding: 30px;
@@ -160,7 +160,7 @@ img{
 
 aside{
     background-color: #3BBD8C;    
-    min-width: 300px;
+    min-width: 200px;
     max-width: 1500px;
     margin: auto;
     padding: 30px;
