--- a/estilo/style.css
+++ b/estilo/style.css
@@ -152,7 +152,8 @@ div.video > iframe{
 
 
 img{
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     max-width: 800px;
     width: 100%;
 }
