--- a/estilo/style.css
+++ b/estilo/style.css
@@ -27,7 +27,7 @@
 
 body{
     background-color: #faebd7;
-    margin: auto;  
+    margin: auto;
     font-family: var(--fonte-padrao);
 }
 
@@ -36,12 +36,13 @@ header{
     margin: 0px;
     padding: 0px;
     height: 130px;
-    max-width: 100%;
+    width: 100%;
     
 }
 
 header>h1{
-    color: white;    
+    color: white;
+    margin-top: 0px;
     padding: 10px;
     font-family: var(--fonte-destaque);
     text-align: center;
@@ -59,7 +60,9 @@ nav{
     text-align: left;
     background-color: #27372F;
     box-shadow: 0px 2px 0px 2px rgba(0, 0, 0, 0.556);
-    
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 nav > a{  
@@ -78,10 +81,8 @@ nav > a:hover{
 }
 
 main{
-    min-width: 300px;
-    max-width: 1000px;
-    margin: auto;
-    padding: 30px;
+    padding: 10px 50px 30px 50px;
+    margin: 0px 150px 0px 150px;
     
     background-color: white;
     box-shadow: 0px 1px 11px 3px black;
@@ -120,7 +121,7 @@ main>p{
 
 div.video{
     background-color: var(--cor02);    
-    margin: 0px -20px 30px -20px;
+    margin: 0px -50px 30px -50px;
     padding: 20px;
     padding-bottom: 63%;
     position: relative;
@@ -134,17 +135,17 @@ div.video > iframe{
 }
 
 #dandroid{
-    display: flex;
+    display: block;
     margin: auto;
 }
 
 #irina{
-    display: flex;
+    display: block;
     margin: auto;
 }
 
 #bugdroid{
-    display: flex;
+    display: block;
     margin: auto;
     max-width: 400px;
     width: 100%;
@@ -152,17 +153,14 @@ div.video > iframe{
 
 
 img{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px;
     max-width: 800px;
     width: 100%;
 }
 
 aside{
     background-color: #3BBD8C;    
-    min-width: 200px;
-    max-width: 1000px;
-    margin: auto;
+    margin: -30px 150px 50px 150px;
     padding: 30px;
     border-radius: 40px;
     box-shadow: 0px 8px 10px 5px black;
