--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,14 +54,13 @@ header>p{
 }
 
 nav{
-    
+    top: -1px;
     padding: 10px; 
     margin: 0px;           
     text-align: left;
     background-color: #27372F;
     box-shadow: 0px 2px 0px 2px rgba(0, 0, 0, 0.556);
-    position: sticky;
-    top: 0;
+    position: sticky;    
     z-index: 1;
 }
 
@@ -69,6 +68,7 @@ nav > a{
     text-decoration: none;  
     color: white;
     font-weight: bolder;
+    top: 0;
     padding: 10px;                     
                
 }
