--- a/estilo/style.css
+++ b/estilo/style.css
@@ -90,6 +90,12 @@ main{
     line-height: 2em;
 }
 
+@media (max-width: 450px) {
+    main {
+        margin: 0px;
+    }
+}
+
 p>a{
     
     color: #27372F;
