--- a/estilo/style.css
+++ b/estilo/style.css
@@ -91,9 +91,14 @@ main{
 }
 
 @media (max-width: 450px) {
+    nav {
+        padding: 4px;
+    }
+    
     main {
         margin: 0px;
     }
+    
 }
 
 p>a{
